@@ -782,15 +782,17 @@ $TAGS->suppress(keys %suppress_tags) if %suppress_tags;
 if ($no_profile) {
     # No profile if we have been given explicit list
     $opt{'LINTIAN_PROFILE'} = '';
-    # If we are given explicit list, we use that regardless
-    # of show_pedantic/display.
-    $TAGS->respect_display_level(0);
     # if tags are listed explicitly (--tags) then show them even if
-    # they are pedantic/experimental.  However, for --check-part
-    # people explictly have to pass --display-experimental and
-    # --pedantic to see them (above).
-    $TAGS->show_experimental(1) if $check_tags;
-    $TAGS->show_pedantic(1) if $check_tags;
+    # they are pedantic/experimental etc.  However, for --check-part
+    # people explictly have to pass the relevant options.
+    if ($check_tags) {
+	$TAGS->show_experimental(1);
+	$TAGS->show_pedantic(1);
+	# discard whatever is in @display_level and request
+	# everything
+	@display_level = ();
+	display_infotags();
+    }
 } else {
     unless ($opt{'LINTIAN_PROFILE'}){
 	# Time to ask dpkg-vendor for a vendor name
@@ -811,16 +813,18 @@ if ($opt{'LINTIAN_PROFILE'}) {
 	my $tag = Lintian::Tag::Info->new($tagname);
 	$tag->set_severity($severity);
     }
-    # Initialize display level settings.
-    for my $level (@display_level) {
-	eval { $TAGS->display(@$level) };
-	if ($@) {
-	    my $error = $@;
-	    $error =~ s/ at .*//;
-	    die $error, "\n";
-	}
+}
+
+# Initialize display level settings.
+for my $level (@display_level) {
+    eval { $TAGS->display(@$level) };
+    if ($@) {
+	my $error = $@;
+	$error =~ s/ at .*//;
+	die $error, "\n";
     }
 }
+
 
 # }}}
 
